первая проверка